--- a/src/components/layout/Card.module.css
+++ b/src/components/layout/Card.module.css
@@ -3,15 +3,18 @@
   height: 200px;
   background-color: aliceblue;
   border-radius: 10px;
+  box-shadow: 5px 5px 7px black;
 }
 
 .container_card img {
   width: 100%;
-  min-height: 80%;
+  height: 80%;
+  max-height: 80%;
   object-fit: cover;
 }
 
 .container_card p {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
+  margin-left: 10px;
 }
