--- a/src/components/layout/Navbar.module.css
+++ b/src/components/layout/Navbar.module.css
@@ -1,11 +1,12 @@
 .navbar {
   width: 20vw;
-  height: 100vh;
+  min-height: 100vh;
   background-color: #1c1616;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
 }
 
 .profile {
