--- a/src/pages/Channel.module.css
+++ b/src/pages/Channel.module.css
@@ -1,5 +1,14 @@
 .container_channels {
   width: 80vw;
-  height: 100vh;
+  min-height: 100vh;
   background-color: #491111;
+  margin-left: 20vw;
+  padding: 40px;
+}
+
+.container_list_channels {
+  max-width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 40px;
 }
