--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -45,3 +45,40 @@
   flex-wrap: wrap;
   gap: 40px;
 }
+
+@media screen and (max-width: 768px) {
+  .container_home {
+    width: 100vw;
+    margin-left: 0;
+    padding: 0;
+    margin-top: 10vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .container_textHome {
+    width: 90%;
+    padding-top: 30px;
+  }
+
+  .container_textHome h1 {
+    font-size: 3rem;
+  }
+
+  .container_textHome p {
+    width: 250px;
+    text-align: center;
+  }
+
+  .box_content {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .container_listHome {
+    width: 95%;
+    justify-content: center;
+  }
+}
