--- a/src/pages/Movie.module.css
+++ b/src/pages/Movie.module.css
@@ -21,3 +21,17 @@
   flex-wrap: wrap;
   gap: 40px;
 }
+
+@media screen and (max-width: 768px) {
+  .container_movies {
+    width: 95%;
+    padding: 0;
+    margin: 0;
+    margin-top: 15vh;
+  }
+
+  .container_list_movies {
+    gap: 30px;
+    justify-content: center;
+  }
+}
